--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.5.0",
     "marked": "^16.0.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "element-plus": "^2.4.0",
+    "@element-plus/icons-vue": "^2.0.10"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
