1.增量处理：只处理新增或修改过的文档，避免重复处理 2.大文件流式处理：对于大型文档，采用分块读取和处理的方式 3.并行处理：利用多线程并行处理多个文档 4.智能分割：优化文档分割策略，提高检索准确性 5.内容过滤：过滤低质量内容，提升知识库质量 6.状态跟踪：跟踪文档处理状态，便于管理和调试

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,18 @@
             <artifactId>langchain4j-community-redis</artifactId>
             <version>1.1.0-beta7</version>
         </dependency>
+        <!-- 添加PDF文档解析支持 -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
+            <version>1.1.0-beta7</version>
+        </dependency>
+        <!-- 添加Office文档解析支持 -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-document-parser-apache-poi</artifactId>
+            <version>1.1.0-beta7</version>
+        </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
