--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,6 @@ spring:
       database: 0
       # 连接超时时间，单位毫秒
       timeout: 3000ms
-      # Lettuce客户端连接池配置
       lettuce:
         pool:
           # 连接池最大活跃连接数
@@ -56,7 +55,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ai_chat_db?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: Zhpenn1991.
+    password: zhpenn1991
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 # MyBatis Plus配置
@@ -98,14 +97,12 @@ langchain4j:
         # API 密钥，用于访问 DashScope 服务的认证凭证
         api-key:
 
-      # 流式聊天模型配置
       streaming-chat-model:
         # 模型名称，指定使用的通义千问模型版本（流式输出）
         model-name: qwen-max
         # API 密钥，用于访问 DashScope 服务的认证凭证（流式输出）
         api-key:
 
-      # 嵌入模型配置
       embedding-model:
         # 模型名称，指定使用的文本嵌入模型版本
         model-name: text-embedding-v4
@@ -140,6 +137,26 @@ rag:
       # 存储类型，可选值为redis(持久化存储)或 memory(内存存储),目前默认使用内存存储，如果使用redissearch存储，请确保已安装Redis和Redisearch
       type: memory  # redis 或 memory
 
+  # 文档处理配置
+  processing:
+    # 是否跟踪文档处理状态，默认为false表示不跟踪
+    track-state: false
+    # 状态文件名
+    state-file-name: .rag-processing-state.json
+    # 是否包含隐藏文件
+    include-hidden: false
+
+  # 大文件处理配置
+  large-file:
+    # 大文件阈值（字节），超过此大小的文件将被流式处理，流式处理时，文件会被分成 stream-chunk-size（默认256KB）大小的块进行处理
+    threshold-bytes: 5242880  # 5MB
+    # 流式处理的块大小（字节）
+    stream-chunk-size: 262144  # 256KB
+
+  # 并行处理配置，配置控制同时处理文档的线程数，提高处理效率
+  # 这些配置使得系统能够更高效、更安全地处理各种类型的文档，无论文档大小如何，都能得到适当的处理。
+  parallelism: 4
+
   # 文本分段配置部分,控制文档切分为文本段落的策略参数
   segment:
     # 每个文本段落的最大字符数，超过此长度将进行分割
@@ -154,6 +171,12 @@ rag:
     # 检索结果的最小相似度分数阈值，低于此分数的结果将被过滤
     min-score: 0.7
 
+  # 内容质量过滤配置
+  content:
+    # 文档最小长度，0表示不过滤
+    min-length: 0
+    # 文档最大噪音比例，1.0表示不过滤
+    max-noise-ratio: 1.0
 
 # 聊天内存配置
 # 用于设置聊天会话中保存的最大消息数量
