1.过滤.rag-processing-state.json使其不加载 2.对于PDF等二进制文件，不应使用大文件流式处理逻辑 3.redis-stack配置到yml中

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,9 +33,9 @@ spring:
   data:
     redis:
       # Redis服务器主机地址
-      host: localhost
+      host: 192.168.10.100
       # Redis服务器端口号
-      port: 6379
+      port: 6380
       # Redis数据库索引号，范围0-15
       database: 0
       # 连接超时时间，单位毫秒
@@ -55,7 +55,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ai_chat_db?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: zhpenn1991
+    password: Zhpenn1991.
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 # MyBatis Plus配置
@@ -112,7 +112,7 @@ langchain4j:
 # bigmodel配置项，用于配置大模型 MCP 的相关的API密钥信息
 # 配置项说明: api-key: 大模型服务的认证密钥，用于API调用的身份验证，格式为: {用户标识}.{访问令牌}
 bigmodel:
-  api-key:
+  api-key: 
 
 # RAG配置
 # 配置文档检索增强生成(RAG)相关参数，包括文档路径、向量存储、文本分段和检索策略等核心组件
@@ -135,16 +135,16 @@ rag:
     # 向量存储的具体实现配置
     store:
       # 存储类型，可选值为redis(持久化存储)或 memory(内存存储),目前默认使用内存存储，如果使用redissearch存储，请确保已安装Redis和Redisearch
-      type: memory  # redis 或 memory
+      type: redis  # redis 或 memory
 
   # 文档处理配置
   processing:
     # 是否跟踪文档处理状态，默认为false表示不跟踪
-    track-state: false
+    track-state: true
     # 状态文件名
     state-file-name: .rag-processing-state.json
     # 是否包含隐藏文件
-    include-hidden: false
+    include-hidden: true
 
   # 大文件处理配置
   large-file:
