--- a/pom.xml
+++ b/pom.xml
@@ -78,52 +78,55 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        
+
+        <!-- langchain4j相关配置-->
         <!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-community-dashscope-spring-boot-starter -->
         <!--suppress VulnerableLibrariesLocal -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-community-dashscope-spring-boot-starter</artifactId>
-            <version>1.1.0-beta7</version>
+            <version>1.3.0-beta9</version>
         </dependency>
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
-            <version>1.1.0</version>
+            <version>1.3.0</version>
         </dependency>
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-spring-boot-starter</artifactId>
-            <version>1.1.0-beta7</version>
+            <version>1.3.0-beta9</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-mcp -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-mcp</artifactId>
-            <version>1.1.0-beta7</version>
+            <version>1.3.0-beta9</version>
         </dependency>
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-reactor</artifactId>
-            <version>1.1.0-beta7</version>
+            <version>1.3.0-beta9</version>
         </dependency>
         <!-- 添加LangChain4j Redis向量存储支持 -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-community-redis</artifactId>
-            <version>1.1.0-beta7</version>
+            <version>1.3.0-beta9</version>
         </dependency>
         <!-- 添加PDF文档解析支持 -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
-            <version>1.1.0-beta7</version>
+            <version>1.3.0-beta9</version>
         </dependency>
         <!-- 添加Office文档解析支持 -->
+        <!--suppress VulnerableLibrariesLocal -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-document-parser-apache-poi</artifactId>
-            <version>1.1.0-beta7</version>
+            <version>1.3.0-beta9</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
