--- a/ui/package.json
+++ b/ui/package.json
@@ -10,11 +10,12 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.5.0",
+    "element-plus": "^2.4.0",
     "marked": "^16.0.0",
     "vue": "^3.3.4",
-    "element-plus": "^2.4.0",
-    "@element-plus/icons-vue": "^2.0.10"
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
